--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "Rust parser for Clickhouse SQL dialect"
 license = "MIT"
 homepage = "https://github.com/superjobru/clickhouse-sql-parser"
 repository = "https://github.com/superjobru/clickhouse-sql-parser"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
